Fix contrast of #love section

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
     --weirdo-fg: #eee;
 
     --love-bg: #dc440f;
-    --love-fg: #222;
+    --love-fg: #eee;
 
     --pets-bg: #0b5212;
     --pets-fg: #eee;
